<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/chicago_city" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="@integer/numLinesTwo"
        android:ems="@integer/ems12"
        android:id="@+id/tvCity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb_direction"
        android:id="@+id/lblDirection"
        android:layout_below="@+id/tvCity"
        android:layout_alignRight="@+id/tvCity"
        android:layout_alignLeft="@+id/tvCity"
        android:layout_alignStart="@+id/tvCity"
        android:layout_alignEnd="@+id/tvCity"
        android:lines="@integer/numLinesTwo"
        android:ems="@integer/ems12" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:labelFor="@string/rb_direction"
        android:id="@+id/rgDirectionGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_north"
            android:id="@+id/rbNorth" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_south"
            android:id="@+id/rbSouth" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_east"
            android:id="@+id/rbEast" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_west"
            android:id="@+id/rbWest" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spn_distance"
        android:id="@+id/lblDistance"
        android:layout_below="@+id/rgDirectionGroup"
        android:layout_marginTop="64dp"
        android:layout_alignLeft="@+id/tvCity"
        android:layout_alignStart="@+id/tvCity"
        android:lines="@integer/numLinesTwo"
        android:ems="@integer/ems12"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnDistance"
        android:layout_below="@+id/lblDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="4dp"
        android:prompt="@string/spinner_prompt"
        android:contentDescription="@string/spinner_prompt"
        android:entries="@array/distance_to_l" />

</RelativeLayout>
